--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Praesent sed tellus ante. a malesuada turpis tempus sit.
                     Fusce suscipit cursus lorem, a malesuada turpis tempus.
                     Sed vestibulum dictum massa pellentesque vestibulum.</p>
-                    <a href="entrada.html" class="btn btn-primario">Leer Entrada</a>
+                    <a href="" class="btn btn-primario">Leer Entrada</a>
                 </div>
 
                 <div class="imagen">
@@ -55,7 +55,7 @@
                     Praesent sed tellus ante. a malesuada turpis tempus sit.
                     Fusce suscipit cursus lorem, a malesuada turpis tempus.
                     Sed vestibulum dictum massa pellentesque vestibulum.</p>
-                    <a href="entrada.html" class="btn btn-primario">Leer Entrada</a>
+                    <a href="" class="btn btn-primario">Leer Entrada</a>
                 </div>
 
                 <div class="imagen">
@@ -67,7 +67,7 @@
                     Praesent sed tellus ante. a malesuada turpis tempus sit.
                     Fusce suscipit cursus lorem, a malesuada turpis tempus.
                     Sed vestibulum dictum massa pellentesque vestibulum.</p>
-                    <a href="entrada.html" class="btn btn-primario">Leer Entrada</a>
+                    <a href="" class="btn btn-primario">Leer Entrada</a>
                 </div>
             </article>
         </main>
